--- a/apoll/index.html
+++ b/apoll/index.html
@@ -130,7 +130,7 @@ a {
 <div class="details">
 <span id="author" class="author">Thomas Spindler</span><br>
 <span id="revnumber">version 1.0.0,</span>
-<span id="revdate">2022-09-16</span>
+<span id="revdate">2022-09-23</span>
 <br><span id="revremark">WRWI</span>
 </div>
 <div id="toc" class="toc2">
@@ -145,6 +145,8 @@ a {
 <ul class="sectlevel2">
 <li><a href="#_begriffspaare">2.1. Begriffspaare</a></li>
 <li><a href="#_bedürfnisse">2.2. Bedürfnisse</a></li>
+<li><a href="#_prinzipien">2.3. Prinzipien</a></li>
+<li><a href="#_marktwirtschaft">2.4. Marktwirtschaft</a></li>
 </ul>
 </li>
 </ul>
@@ -225,6 +227,12 @@ Unternehmen &#8592;&#8594; Haushalt</p>
 </li>
 </ul>
 </div>
+<div class="imageblock">
+<div class="content">
+<img src="images/wirtschaftskreislauf.png" alt="wirtschaftskreislauf">
+</div>
+<div class="title">Figure 1. Erweiteter Wirschaftskreislauf</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_bedürfnisse">2.2. Bedürfnisse</h3>
@@ -252,13 +260,99 @@ Unternehmen &#8592;&#8594; Haushalt</p>
 </div>
 </details>
 </div>
+<div class="sect2">
+<h3 id="_prinzipien">2.3. Prinzipien</h3>
+<div class="paragraph">
+<p><a href="https://a.digi4school.at/ebook/6328/?page=20">Buch S.3</a></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Ökonomisches Prinzip: wenig Verschwendung</p>
+</li>
+<li>
+<p>Minimalprinzip: aufwand minimieren</p>
+</li>
+<li>
+<p>Maximalprinzip: das Ergebnis maximieren</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_marktwirtschaft">2.4. Marktwirtschaft</h3>
+<div class="sect3">
+<h4 id="_freie_marktwirtschaft">2.4.1. Freie Marktwirtschaft</h4>
+<div class="paragraph">
+<p>Der Markt wird nicht von der Polikik geregelt</p>
+</div>
+<div class="paragraph">
+<p><strong>Das Problem:</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Sachen wie Miete werden unendlich teuer</p>
+</li>
+<li>
+<p>Was nicht gewinnbringend ist, wird nicht gemacht (vor allem Infrastruktur) &#8594; Staat</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Dienstleistungen und Güter, die niemand anbietet (weil nicht Gewinnbringend)</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="images/gewinn.png" alt="gewinn" width="778" height="131">
+</div>
+</div>
+<div class="paragraph">
+<p>Multiplikator: Wenn einer gute Idee hat, gibt es Arbeitsplätze, und man gibt das Geld wieder aus</p>
+</div>
+<div class="paragraph">
+<p>Produktionsmittel sind im Privateigentum</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_soziale_marktwirtschaft">2.4.2. Soziale Marktwirtschaft</h4>
+<div class="paragraph">
+<p>Soziale Marktwirtschaft ist für benachteiligte, die nicht normal arbeiten können</p>
+</div>
+<div class="paragraph">
+<p>Beispiele:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Arbeitslosengeld</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Die Leute werden mit einem System versorgt (Bildung, Gesundheit, &#8230;&#8203;)</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_ökosoziale_marktwirtschaft">2.4.3. Ökosoziale Marktwirtschaft</h4>
+<div class="paragraph">
+<p>Ökologie?</p>
+</div>
+<div class="paragraph">
+<p>Umwelt, Umweltschutz</p>
+</div>
+<div class="paragraph">
+<p>Der Staat greift regulierend ein, und schütz dadurch die Menschen und Umwelt, der Markt is außerhalb dieser Eingriffe sonst aber frei.</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2022-09-16 09:30:59 +0200
+Last updated 2022-09-23 08:51:08 +0200
 </div>
 </div>
 </body>
