--- a/mose/index.html
+++ b/mose/index.html
@@ -130,7 +130,7 @@ a {
 <div class="details">
 <span id="author" class="author">Thomas Spindler</span><br>
 <span id="revnumber">version 1.0.0,</span>
-<span id="revdate">2022-09-16</span>
+<span id="revdate">2022-10-03</span>
 <br><span id="revremark">WRRE</span>
 </div>
 <div id="toc" class="toc2">
@@ -141,6 +141,15 @@ a {
 <li><a href="#_dauerhausübung">1.1. Dauerhausübung:</a></li>
 </ul>
 </li>
+<li><a href="#_rechtsformen">2. Rechtsformen</a></li>
+<li><a href="#_privates_und_öffentliches_recht">3. Privates und öffentliches Recht</a>
+<ul class="sectlevel2">
+<li><a href="#_privates_recht">3.1. privates Recht:</a></li>
+<li><a href="#_öffentliches_recht">3.2. öffentliches Recht</a></li>
+<li><a href="#_zwingendes_recht_und_nachgiebiges_recht">3.3. Zwingendes Recht und nachgiebiges Recht</a></li>
+</ul>
+</li>
+<li><a href="#_rechtsnormen">4. Rechtsnormen</a></li>
 </ul>
 </div>
 </div>
@@ -234,11 +243,79 @@ Jeden Montag wird gefragt, was wir gelesen haben.
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_rechtsformen">2. Rechtsformen</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="_privates_und_öffentliches_recht">3. Privates und öffentliches Recht</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_privates_recht">3.1. privates Recht:</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Bürger gegen Bürger</p>
+</li>
+<li>
+<p>Kaufvertrag</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_öffentliches_recht">3.2. öffentliches Recht</h3>
+<div class="paragraph">
+<p>z.B.: Standesbeamter bei Hochzeit
+Bürger gegen Staat</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_zwingendes_recht_und_nachgiebiges_recht">3.3. Zwingendes Recht und nachgiebiges Recht</h3>
+<div class="paragraph">
+<p>Zwingendes Recht muss befolgt werden</p>
+</div>
+<div class="paragraph">
+<p>nachgiebiges Recht kann ausgemacht oder abgesprochen werden.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_rechtsnormen">4. Rechtsnormen</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Österreich ist:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Rechtsstaat</p>
+</li>
+<li>
+<p>Gewaltenteilend</p>
+</li>
+<li>
+<p>Verordnung: Gilt sofort für alle (DSGVO)<br></p>
+</li>
+<li>
+<p>Richtlinie: muss zuerst in nationales Recht umgewandelt werden (z.B Anti - Diskriminierung)</p>
+</li>
+<li>
+<p>Verfassungsrecht: hat einen sehr hohen stellen
+*</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2022-09-16 09:31:23 +0200
+Last updated 2022-10-03 12:39:21 +0200
 </div>
 </div>
 </body>
