Idk what lecture but here you go

--- a/apoll/index.html
+++ b/apoll/index.html
@@ -130,7 +130,7 @@ a {
 <div class="details">
 <span id="author" class="author">Thomas Spindler</span><br>
 <span id="revnumber">version 1.0.0,</span>
-<span id="revdate">2022-09-23</span>
+<span id="revdate">2022-10-07</span>
 <br><span id="revremark">WRWI</span>
 </div>
 <div id="toc" class="toc2">
@@ -147,6 +147,13 @@ a {
 <li><a href="#_bedürfnisse">2.2. Bedürfnisse</a></li>
 <li><a href="#_prinzipien">2.3. Prinzipien</a></li>
 <li><a href="#_marktwirtschaft">2.4. Marktwirtschaft</a></li>
+</ul>
+</li>
+<li><a href="#_arbeitsteilung">3. Arbeitsteilung</a>
+<ul class="sectlevel2">
+<li><a href="#_nachschreiben">3.1. NACHSCHREIBEN</a></li>
+<li><a href="#_nachschreiben_2">3.2. NACHSCHREIBEN</a></li>
+<li><a href="#_internationale_arbeitsteilung">3.3. internationale Arbeitsteilung</a></li>
 </ul>
 </li>
 </ul>
@@ -348,11 +355,60 @@ Unternehmen &#8592;&#8594; Haushalt</p>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_arbeitsteilung">3. Arbeitsteilung</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_nachschreiben">3.1. NACHSCHREIBEN</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_nachschreiben_2">3.2. NACHSCHREIBEN</h3>
+<div class="paragraph">
+<p>horizontale Arbeitsteilung: z.B Tischler, Spezialiersiert sich auf irgendetwas</p>
+</div>
+<div class="paragraph">
+<p>vertikale Arbeitsteilung: Sektoren</p>
+</div>
+<div class="sect3">
+<h4 id="_arbeitssektoren">3.2.1. Arbeitssektoren</h4>
+<div class="paragraph">
+<p>~5 primärer sektor</p>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_internationale_arbeitsteilung">3.3. internationale Arbeitsteilung</h3>
+<div class="paragraph">
+<p>Voraussetzungen</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Rohstoff - Vorkommen</p>
+</li>
+<li>
+<p>Lohnniveauunterschiede (80€ bei uns, 2Cent in Bangladesh)</p>
+</li>
+<li>
+<p>(Know How)</p>
+</li>
+<li>
+<p>Klima</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>&#8658; es wird dort produziert, wo die Kosten am niedrigsten sind!</p>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2022-09-23 08:51:08 +0200
+Last updated 2022-10-07 08:35:51 +0200
 </div>
 </div>
 </body>
