--- a/mose/index.html
+++ b/mose/index.html
@@ -130,7 +130,7 @@ a {
 <div class="details">
 <span id="author" class="author">Thomas Spindler</span><br>
 <span id="revnumber">version 1.0.0,</span>
-<span id="revdate">2022-10-03</span>
+<span id="revdate">2022-10-07</span>
 <br><span id="revremark">WRRE</span>
 </div>
 <div id="toc" class="toc2">
@@ -158,7 +158,7 @@ a {
 <h2 id="_einführung">1. Einführung</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>eine schriftliche Leistungsüberprüfung im Schuljahr, warscheinlich Dezember</p>
+<p>eine schriftliche Leistungsüberprüfung im Schuljahr, wahrscheinlich Dezember</p>
 </div>
 <div class="paragraph">
 <p>Termin: 01.12.2022</p>
@@ -304,8 +304,7 @@ Bürger gegen Staat</p>
 <p>Richtlinie: muss zuerst in nationales Recht umgewandelt werden (z.B Anti - Diskriminierung)</p>
 </li>
 <li>
-<p>Verfassungsrecht: hat einen sehr hohen stellen
-*</p>
+<p>Verfassungsrecht: hat einen sehr hohen stellen</p>
 </li>
 </ul>
 </div>
@@ -315,7 +314,7 @@ Bürger gegen Staat</p>
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2022-10-03 12:39:21 +0200
+Last updated 2022-10-07 08:08:38 +0200
 </div>
 </div>
 </body>
