Sektoren der Wirtschaft

--- a/apoll/index.html
+++ b/apoll/index.html
@@ -400,8 +400,38 @@ Unternehmen &#8592;&#8594; Haushalt</p>
 </div>
 <div class="sect3">
 <h4 id="_arbeitssektoren">3.2.1. Arbeitssektoren</h4>
+<div class="sect4">
+<h5 id="_primärer_sektor">primärer Sektor</h5>
 <div class="paragraph">
-<p>~5 primärer sektor</p>
+<p>Auch genannt Urproduktion</p>
+</div>
+<div class="paragraph">
+<p>Hierbei geht es um die Gewinnung der Rohstoffe.</p>
+</div>
+<div class="paragraph">
+<p>Beispiel: Land und Forstwirtschaft oder Fischerei</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_sekundärer_sektor">sekundärer Sektor</h5>
+<div class="paragraph">
+<p>Auch genannte Industriesektor</p>
+</div>
+<div class="paragraph">
+<p>Hierbei geht es um die Verarbeitung der Rohstoffe</p>
+</div>
+<div class="paragraph">
+<p>z.B: Handwerk, Bauindustrie</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_tertiärer_sektor">tertiärer Sektor</h5>
+<div class="paragraph">
+<p>Dienstleistungen</p>
+</div>
+<div class="paragraph">
+<p>z.B Verkäufer, Bankwesen</p>
+</div>
 </div>
 </div>
 </div>
@@ -1084,7 +1114,7 @@ Amortisation</p>
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2022-12-22 18:48:46 +0100
+Last updated 2022-12-22 22:30:03 +0100
 </div>
 </div>
 </body>
